--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,27 @@
 data/
 node_modules/
 dist/
+
+# Generic ignored files/folders
+# OS generated files
+.DS_Store
+Thumbs.db
+
+# IDE/Editor specific files
+.vscode/
+.idea/
+*.sublime-project
+*.sublime-workspace
+*.swp
+*.swo
+
+# Build artifacts and temporary files
+*.log
+*.tmp
+*.bak
+temp/
+tmp/
+coverage/
+.nyc_output/
+.env
+.env.*
