--- a/package.json
+++ b/package.json
@@ -30,7 +30,8 @@
   "homepage": "https://github.com/katroc/bugger#readme",
   "dependencies": {
     "@modelcontextprotocol/sdk": "^0.4.0",
-    "zod": "^4.0.5"
+    "zod": "^4.0.5",
+    "sqlite3": "^5.1.7"
   },
   "devDependencies": {
     "@types/node": "^20.19.8",
