--- a/package.json
+++ b/package.json
@@ -7,9 +7,7 @@
   "scripts": {
     "build": "tsc",
     "start": "node dist/index.js",
-    "dev": "tsc && node dist/index.js",
-    "migrate": "tsc && node dist/migrate.js",
-    "test-cli": "tsc && node dist/test-cli.js"
+    "dev": "tsc && node dist/index.js"
   },
   "keywords": [
     "mcp",
@@ -30,8 +28,8 @@
   "homepage": "https://github.com/katroc/bugger#readme",
   "dependencies": {
     "@modelcontextprotocol/sdk": "^0.4.0",
-    "zod": "^4.0.5",
-    "sqlite3": "^5.1.7"
+    "sqlite3": "^5.1.7",
+    "zod": "^4.0.5"
   },
   "devDependencies": {
     "@types/node": "^20.19.8",
