--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "bugger-mcp",
-  "version": "0.4.12",
+  "version": "1.0.0",
   "description": "MCP Server for managing bugs, feature requests, and improvements",
   "main": "index.js",
   "type": "module",
@@ -53,6 +53,8 @@
     "bugger-mcp": "dist/index.js"
   },
   "eslintConfig": {
-    "extends": ["./.eslintrc.cjs"]
+    "extends": [
+      "./.eslintrc.cjs"
+    ]
   }
 }
